# arvc_ground_filter

./: .gitignore  CMakeLists.txt  README.md  package.xml
config/: config.yaml
examples/minkunet_predictions/: 00000.ply  00000_camera_params.txt  00009.ply  00012.ply  00017.ply  00128.ply  00128_camera_params.txt  00155_camera_params.txt  00272.ply  00272_camera_params.txt  00349_camera_params.txt  00450.ply  00455.ply  00567.ply  00581.ply  00747.ply  00765.ply  00847.ply  00886_camera_params.txt  00924.ply
include/: csv_utils.hpp  utils.hpp
include/arvc_ground_filter/: ground_filter.hpp
log/: log.txt
src/: exp_queue_single_threaded.cpp  experiment_queue.cpp  ground_filter.cpp  node.cpp  visualize_clouds.cpp
